UPDATE: Updated qis.py && added docker-compose and docker to deploy

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,38 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.venv
+venv/
+ENV/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Node
+node_modules/
+dist/
+dist-ssr/
+*.local
+
+# OS
 .DS_Store
-node_modules
-/dist
-quantum-env
-/dilemmavenv
-/server/app/env
-/server/app/venv
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-server/app/__pycache__/qis.cpython-311.pyc
-
+Thumbs.db
