fix: docker build contexts and paths for Render

--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
   - type: web
     name: dilemma-backend
     env: docker
-    dockerContext: ./server
-    dockerfilePath: Dockerfile
-    plan: free # Change to starter if you need more power
+    dockerContext: .
+    dockerfilePath: server/Dockerfile
+    plan: free
     envVars:
       - key: FLASK_ENV
         value: production
