--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,20 +4,20 @@ FROM python:3.10-slim
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the requirements file into the container
-COPY requirements.txt .
+# Copy the requirements file from the server subdirectory
+COPY server/requirements.txt ./
 
-# Install any needed packages specified in requirements.txt
+# Install packages
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the server code into the container
-COPY . .
+# Copy the entire server folder content to the container's app folder
+COPY server/ ./
 
-# Set the Python path to include the current directory
-ENV PYTHONPATH=/app/app
+# Set the Python path
+ENV PYTHONPATH=/app
 
-# Make port 5000 available to the world outside this container
+# Make port available
 EXPOSE 5000
 
-# Run the application
+# Run the application (assuming __init__.py is inside app/)
 CMD ["python", "app/__init__.py"]
